--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -72,6 +72,7 @@ html {
 
             img {
               height: 100%;
+              max-width: 160px;
             }
           }
 
@@ -98,7 +99,7 @@ html {
       background: url(/static/carina.jpg);
       background-size: cover;
       position: relative;
-      padding: 8rem 0;
+      padding: 13rem 0;
 
       .overlay {
         position: absolute;
@@ -158,172 +159,37 @@ html {
       }
     }
 
-    .projects {
-      background: white;
-      padding: 1rem 0;
-      .wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 1rem;
-        .project {
-          img {
-          }
-        }
-      }
-    }
-
     .bar {
-      background: white;
-      padding: 0.5rem 0;
+      .wrapper {
+        p {
+          color: #bbb;
+          text-align: center;
+          font-family: Helvetica;
+          font-weight: bold;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+          font-size: 0.8rem;
+        }
 
-      img {
-        display: block;
-        margin: 0 auto;
-      }
-    }
-
-    .introduction {
-      background: white;
-      padding: 0.5rem 0;
-
-      .container {
-        width: 100vw;
-        height: 85px;
-        overflow: hidden;
-        position: relative;
-
-        .slideshow {
-          position: absolute;
-          width: 300vw;
-          height: 85px;
+        .brands {
+          padding: 1rem 0;
           display: flex;
           align-items: center;
-          // animation: slide 120s linear infinite;
-
-          .frame {
-            flex: 0 0 100vw;
-            height: 115px;
-            left: 0;
-            top: 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-
-            div {
-              flex: 0 0 auto;
-
-              img {
-                width: 75%;
-              }
-            }
-          }
-        }
-      }
-    }
-
-    .showcase {
-      background: white;
-      padding: 4rem 0;
-      .wrapper {
-        blockquote {
-          font-size: 1.6rem;
-          font-weight: bold;
-          font-style: italic;
-          color: #666;
-          text-align: center;
-          padding-bottom: 2rem;
-        }
-
-        .video-wrapper {
-          position: relative;
-          padding-bottom: 56.25%;
-          height: 0;
-
-          iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-          }
-        }
-      }
-    }
-
-    .contributions {
-      padding: 2rem 0 4rem 0;
-      background: #f7f7f7;
-
-      .message {
-        text-align: center;
-        padding-bottom: 2rem;
-      }
-
-      .wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap: 2rem;
-
-        .column {
-          background: white;
-          border-radius: 0.5rem;
-          overflow: hidden;
+          justify-content: space-between;
 
           img {
-            width: 100%;
-            display: block;
-          }
-
-          .content {
-            padding: 1rem;
-            h3 {
-              text-align: center;
-            }
-            p {
-              text-align: center;
-            }
+            max-width: 7rem;
+            max-height: 2rem;
+            filter: opacity(0.25);
           }
         }
       }
     }
 
-    .the-problem {
-      background: #f7f7f7;
+    .quantum-neuron-selection {
+      background: #eeeeee;
       padding: 10rem 0;
       background-image: url(/static/brain.svg);
-      background-size: 45vw;
-      background-repeat: no-repeat;
-      background-position: center right;
-
-      .wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 2rem;
-        align-items: center;
-
-        div {
-          grid-column: 1;
-          h1 {
-            font-family: Helvetica;
-            font-size: 3rem;
-            text-transform: uppercase;
-            line-height: 1;
-            letter-spacing: -0.1rem;
-            margin-bottom: 1rem;
-            color: black;
-          }
-          p {
-            color: black;
-            font-size: 1.1rem;
-          }
-        }
-      }
-    }
-
-    .the-idea {
-      background: #0f0f0f;
-      padding: 10rem 0;
-      background-image: url(/static/earth-dark.svg);
       background-size: 45vw;
       background-repeat: no-repeat;
       background-position: center left;
@@ -343,11 +209,107 @@ html {
             line-height: 1;
             letter-spacing: -0.1rem;
             margin-bottom: 1rem;
+            color: black;
+          }
+          p {
+            color: black;
+            font-size: 1.1rem;
+          }
+          .read-more {
+            display: inline-block;
+            margin: 1rem 0;
+            color: black;
+            font-family: Helvetica;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.8rem;
+          }
+        }
+      }
+    }
+
+    .there-is-no-magic-subnetwork {
+      background: #0f0f0f;
+      padding: 10rem 0;
+      background-image: url(/static/jewel-stone-diamond.svg);
+      background-size: 45vw;
+      background-repeat: no-repeat;
+      background-position: center right;
+
+      .wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 2rem;
+        align-items: center;
+
+        div {
+          grid-column: 1;
+          h1 {
+            font-family: Helvetica;
+            font-size: 3rem;
+            text-transform: uppercase;
+            line-height: 1;
+            letter-spacing: -0.1rem;
+            margin-bottom: 1rem;
             color: white;
           }
           p {
             color: white;
             font-size: 1.1rem;
+          }
+          .read-more {
+            display: inline-block;
+            margin: 1rem 0;
+            color: white;
+            font-family: Helvetica;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.8rem;
+          }
+        }
+      }
+    }
+
+    .prune-and-tune-ensembles {
+      background: #eeeeee;
+      padding: 10rem 0;
+      background-image: url(/static/cell-nucleus.svg);
+      background-size: 45vw;
+      background-repeat: no-repeat;
+      background-position: center left;
+
+      .wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 2rem;
+        align-items: center;
+
+        div {
+          grid-column: 2;
+          h1 {
+            font-family: Helvetica;
+            font-size: 3rem;
+            text-transform: uppercase;
+            line-height: 1;
+            letter-spacing: -0.1rem;
+            margin-bottom: 1rem;
+            color: black;
+          }
+          p {
+            color: black;
+            font-size: 1.1rem;
+          }
+          .read-more {
+            display: inline-block;
+            margin: 1rem 0;
+            color: black;
+            font-family: Helvetica;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.8rem;
           }
         }
       }
@@ -449,7 +411,7 @@ html {
 
 .wrapper {
   padding: 1rem;
-  max-width: 65rem;
+  max-width: 80rem;
   margin: 0 auto;
 }
 
