--- a/src/assets/styles/art.scss
+++ b/src/assets/styles/art.scss
@@ -145,8 +145,51 @@ html {
       }
     }
 
+    .gallery {
+      background: black;
+      padding: 1rem;
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(8, 1fr);
+      grid-template-rows: repeat(8, 5vw);
+      grid-gap: 1rem;
+
+      .item {
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+
+        &:nth-child(1) {
+          grid-column-start: 1;
+          grid-column-end: 5;
+          grid-row-start: 1;
+          grid-row-end: 4;
+        }
+        &:nth-child(2) {
+          grid-column-start: 5;
+          grid-column-end: 9;
+          grid-row-start: 1;
+          grid-row-end: 7;
+        }
+        &:nth-child(3) {
+          grid-column-start: 1;
+          grid-column-end: 3;
+          grid-row-start: 4;
+          grid-row-end: 7;
+        }
+        &:nth-child(4) {
+          grid-column-start: 3;
+          grid-column-end: 5;
+          grid-row-start: 4;
+          grid-row-end: 7;
+        }
+      }
+    }
+
     footer {
-      background: #0f0f0f;
+      background: white;
       padding: 2rem 0;
 
       .wrapper {
@@ -156,7 +199,7 @@ html {
 
         .column {
           h2 {
-            color: white;
+            color: black;
             font-family: Helvetica;
             text-transform: uppercase;
             margin-bottom: 1rem;
@@ -166,7 +209,7 @@ html {
             display: block;
             width: max-content;
             margin-bottom: 1rem;
-            color: #aaa;
+            color: black;
             font-family: Helvetica;
             font-size: 0.8rem;
           }
