--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -97,11 +97,10 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(https://thewhitakerwedding.com/img/blurry-small-cartoon-crop.e0015576.jpg);
-      // background: url(https://thewhitakerwedding.com/img/basslake-portrait.7b50dce8.jpg);
+      background: url(/static/blurry-small-cartoon.jpg);
       background-size: cover;
       background-color: white;
-      background-position: right;
+      background-position: right 70%;
       background-repeat: no-repeat;
       position: relative;
       height: 80vh;
