--- a/src/assets/styles/architectures.scss
+++ b/src/assets/styles/architectures.scss
@@ -97,13 +97,13 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(https://images.unsplash.com/photo-1621619856624-42fd193a0661?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1158&q=80);
+      // background: url(https://images.unsplash.com/photo-1516396497610-02bd248ce8b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1545&q=80);
       background-size: cover;
-      background-color: white;
+      background-color: black;
       background-position: right;
       background-repeat: no-repeat;
       position: relative;
-      height: 80vh;
+      height: 60vh;
 
       .overlay {
         position: absolute;
