Add placeholder images

--- a/src/assets/styles/architectures.scss
+++ b/src/assets/styles/architectures.scss
@@ -193,7 +193,7 @@ html {
             }
           }
         }
-        &:nth-child(odd) {
+        &:nth-child(even) {
           background: white;
         }
       }
