--- a/src/assets/styles/research.scss
+++ b/src/assets/styles/research.scss
@@ -199,7 +199,7 @@ html {
     }
 
     .quantum-neuron-selection {
-      background: #eeeeee;
+      background: white;
       padding: 10rem 0;
       background-image: url(/static/brain.svg);
       background-size: 45vw;
@@ -284,7 +284,7 @@ html {
       }
     }
     .prune-and-tune-ensembles {
-      background: white;
+      background: 0f0f0f;
       padding: 10rem 0;
       background-image: url(/static/cell-nucleus.svg);
       background-size: 45vw;
