--- a/src/assets/styles/art.scss
+++ b/src/assets/styles/art.scss
@@ -167,6 +167,30 @@ html {
         grid-row-start: 4;
         grid-row-end: 7;
       }
+      &:nth-child(5) {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 7;
+        grid-row-end: 9;
+      }
+      &:nth-child(6) {
+        grid-column-start: 3;
+        grid-column-end: 5;
+        grid-row-start: 7;
+        grid-row-end: 9;
+      }
+      &:nth-child(7) {
+        grid-column-start: 5;
+        grid-column-end: 7;
+        grid-row-start: 7;
+        grid-row-end: 9;
+      }
+      &:nth-child(8) {
+        grid-column-start: 7;
+        grid-column-end: 9;
+        grid-row-start: 7;
+        grid-row-end: 9;
+      }
     }
   }
 
