--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -147,79 +147,34 @@ html {
 
     .intro {
       display: flex;
-      align-items:center;
+      align-items: center;
 
       .content {
-        flex:0 0 50%;
+        flex: 0 0 50%;
       }
       .image {
-        flex:0 0 50%;
+        flex: 0 0 50%;
       }
     }
 
     .climbing {
       display: flex;
-      align-items:center;
+      align-items: center;
 
       .content {
-        flex:0 0 50%;
+        flex: 0 0 50%;
       }
       .image {
-        flex:0 0 50%;
+        flex: 0 0 50%;
         img {
-          display:block;
+          display: block;
         }
       }
     }
 
-    .education {
-      padding: 5rem 0;
-      h1 {
-        border-bottom: 1px solid black;
-      }
-      .entry {
-        padding: 2rem 0;
-      }
+    .personal {
     }
-
-    .awards {
-      padding: 5rem 0;
-
-      h1 {
-        border-bottom: 1px solid black;
-      }
-
-      background: #eee;
-    }
-
-    .experience {
-      padding: 5rem 0;
-
-      h1 {
-        border-bottom: 1px solid black;
-      }
-
-      background: white;
-    }
-
-    .skills {
-      padding: 5rem 0;
-
-      h1 {
-        border-bottom: 1px solid black;
-      }
-
-      background: #eee;
-    }
-
-    .interests {
-      padding: 5rem 0;
-
-      h1 {
-        border-bottom: 1px solid black;
-      }
-
-      background: white;
+    .professional {
     }
 
     footer {
