--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -157,7 +157,7 @@ html {
       }
     }
 
-    .climbing {
+    .personal {
       display: flex;
       align-items: center;
 
@@ -172,9 +172,74 @@ html {
       }
     }
 
-    .personal {
-    }
     .professional {
+    }
+
+    .gallery {
+      background: black;
+      padding: 1rem;
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(8, 1fr);
+      grid-template-rows: repeat(8, 5vw);
+      grid-gap: 1rem;
+
+      .item {
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+
+        &:nth-child(1) {
+          grid-column-start: 1;
+          grid-column-end: 5;
+          grid-row-start: 1;
+          grid-row-end: 4;
+        }
+        &:nth-child(2) {
+          grid-column-start: 5;
+          grid-column-end: 9;
+          grid-row-start: 1;
+          grid-row-end: 7;
+        }
+        &:nth-child(3) {
+          grid-column-start: 1;
+          grid-column-end: 3;
+          grid-row-start: 4;
+          grid-row-end: 7;
+        }
+        &:nth-child(4) {
+          grid-column-start: 3;
+          grid-column-end: 5;
+          grid-row-start: 4;
+          grid-row-end: 7;
+        }
+        &:nth-child(5) {
+          grid-column-start: 1;
+          grid-column-end: 3;
+          grid-row-start: 7;
+          grid-row-end: 9;
+        }
+        &:nth-child(6) {
+          grid-column-start: 3;
+          grid-column-end: 5;
+          grid-row-start: 7;
+          grid-row-end: 9;
+        }
+        &:nth-child(7) {
+          grid-column-start: 5;
+          grid-column-end: 7;
+          grid-row-start: 7;
+          grid-row-end: 9;
+        }
+        &:nth-child(8) {
+          grid-column-start: 7;
+          grid-column-end: 9;
+          grid-row-start: 7;
+          grid-row-end: 9;
+        }
+      }
     }
 
     footer {
