--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -163,6 +163,13 @@ html {
 
       .content {
         flex: 0 0 50%;
+        .wrapper {
+          max-width:60%;
+
+          p {
+            margin-bottom:1rem;
+          }
+        }
       }
       .image {
         flex: 0 0 50%;
@@ -173,6 +180,23 @@ html {
     }
 
     .professional {
+      .education {
+        .item {
+          padding:1rem 0;
+          .header {
+            display:flex;
+            align-items: center;
+            justify-content: space-between;
+
+            h2 {
+              font-size:1rem;
+            }
+            span {
+              font-weight:bold;
+            }
+          }
+        }
+      }
     }
 
     .gallery {
