--- a/src/assets/styles/research.scss
+++ b/src/assets/styles/research.scss
@@ -97,7 +97,7 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/lab-bg.png);
+      background: url(/static/space-bg.png);
       background-size: cover;
       background-color: white;
       background-position: center;
