--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -97,10 +97,10 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/brain-bg.png);
+      background: url(/static/cave-bg.png);
       background-size: cover;
       background-color: white;
-      background-position: center top;
+      background-position: center;
       background-repeat: no-repeat;
       position: relative;
       height: 80vh;
