--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -113,7 +113,7 @@ html {
         bottom: 0;
         z-index: 0;
         background: black;
-        opacity: 0.5;
+        opacity: 0.3;
       }
 
       .wrapper {
@@ -148,7 +148,7 @@ html {
       background: url(/static/chess-bg.png);
       background-size: cover;
       background-color: white;
-      background-position: right 70%;
+      background-position: top;
       background-repeat: no-repeat;
       position: relative;
       height: 80vh;
