--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -197,10 +197,10 @@ html {
 
     .hero2 {
       width: 100%;
-      background: url(/static/blurry-small-cartoon-bw.jpg);
+      background: url(/static/test-profile.jpg);
       background-size: cover;
       background-color: white;
-      background-position: right 70%;
+      background-position: top;
       background-repeat: no-repeat;
       position: relative;
       height: 80vh;
@@ -213,7 +213,7 @@ html {
         bottom: 0;
         z-index: 0;
         background: black;
-        opacity: 0.3;
+        opacity: 0.5;
       }
 
       .wrapper {
@@ -230,7 +230,7 @@ html {
           letter-spacing: -0.1rem;
           margin-bottom: 1rem;
           color: white;
-          max-width: 50rem;
+          max-width: 42rem;
         }
 
         p {
@@ -238,7 +238,7 @@ html {
           font-size: 1.1rem;
           font-style: italic;
           margin-bottom: 2rem;
-          max-width: 50rem;
+          max-width: 42rem;
         }
       }
     }
