Add new homepage

--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -97,7 +97,7 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/blurry-small-cartoon-bw.jpg);
+      background: url(/static/mountain-bg.png);
       background-size: cover;
       background-color: white;
       background-position: right 70%;
@@ -113,7 +113,7 @@ html {
         bottom: 0;
         z-index: 0;
         background: black;
-        opacity: 0.3;
+        opacity: 0.5;
       }
 
       .wrapper {
