--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -125,7 +125,7 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/mountain-bg.png);
+      background: url(/static/grove-bg.png);
       background-size: cover;
       background-color: white;
       background-position: center;
@@ -195,7 +195,7 @@ html {
       }
     }
 
-    .hero2 {
+    .personal {
       width: 100%;
       background: url(/static/test-profile.jpg);
       background-size: cover;
@@ -271,38 +271,38 @@ html {
       }
     }
 
-    .personal {
-      display: flex;
-      align-items: center;
-      background-image: url(/static/brain.svg);
-      background-size: 50vw;
-      background-repeat: no-repeat;
-      background-position: -30%;
+    // .personal {
+    //   display: flex;
+    //   align-items: center;
+    //   background-image: url(/static/brain.svg);
+    //   background-size: 50vw;
+    //   background-repeat: no-repeat;
+    //   background-position: -30%;
 
-      .content {
-        flex: 0 0 50%;
-        position: relative;
+    //   .content {
+    //     flex: 0 0 50%;
+    //     position: relative;
 
-        .wrapper {
-          blockquote {
-            padding: 1rem;
-            text-align: center;
-            font-size: 3rem;
-            font-style: italic;
-            margin-bottom: 1rem;
-          }
-          p {
-            text-align: center;
-          }
-        }
-      }
-      .image {
-        flex: 0 0 50%;
-        img {
-          display: block;
-        }
-      }
-    }
+    //     .wrapper {
+    //       blockquote {
+    //         padding: 1rem;
+    //         text-align: center;
+    //         font-size: 3rem;
+    //         font-style: italic;
+    //         margin-bottom: 1rem;
+    //       }
+    //       p {
+    //         text-align: center;
+    //       }
+    //     }
+    //   }
+    //   .image {
+    //     flex: 0 0 50%;
+    //     img {
+    //       display: block;
+    //     }
+    //   }
+    // }
 
     .featured {
       background: white;
@@ -367,6 +367,50 @@ html {
         }
       }
     }
+
+    .my-research {
+      background: white;
+      padding: 10rem 0;
+      background-image: url(/static/brain.svg);
+      background-size: 45vw;
+      background-repeat: no-repeat;
+      background-position: center left;
+
+      .wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 2rem;
+        align-items: center;
+
+        div {
+          grid-column: 2;
+          h1 {
+            font-family: Helvetica;
+            font-size: 3rem;
+            text-transform: uppercase;
+            line-height: 1;
+            letter-spacing: -0.1rem;
+            margin-bottom: 1rem;
+            color: black;
+          }
+          p {
+            color: black;
+            font-size: 1.1rem;
+          }
+          .read-more {
+            display: inline-block;
+            margin: 1rem 0;
+            color: black;
+            font-family: Helvetica;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.8rem;
+          }
+        }
+      }
+    }
+
 
     .contact {
       padding: 2rem 0;
