--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -358,10 +358,16 @@ html {
           .column {
             flex: 0 0 30%;
             text-align: center;
+            
+            .icon {
+              margin:0 auto;
+              height:7rem;
+              width:7rem;
 
-            img {
-              width: 35%;
-              padding-bottom: 1rem;
+              img {
+                width:100%;
+                height:100%;
+              }
             }
           }
         }
