--- a/src/assets/styles/projects.scss
+++ b/src/assets/styles/projects.scss
@@ -85,7 +85,7 @@ html {
         width: 100%;
         background: white;
         margin: 0;
-        padding: 0.5rem;
+        padding: 0;
 
         .wrapper {
           display: grid;
