--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -88,7 +88,7 @@ html {
         width: 100%;
         background: white;
         margin: 0;
-        padding: 0.5rem;
+        padding: 0;
 
         .wrapper {
           display: grid;
@@ -391,11 +391,8 @@ html {
         div {
           grid-column: 2;
           h1 {
-            font-family: Helvetica;
-            font-size: 3rem;
-            text-transform: uppercase;
-            line-height: 1;
-            letter-spacing: -0.1rem;
+            font-size: 2rem;
+            line-height: 1.2;
             margin-bottom: 1rem;
             color: black;
           }
@@ -419,7 +416,7 @@ html {
 
 
     .contact {
-      padding: 2rem 0;
+      padding: 5rem 0;
       background: white;
 
       .wrapper {
@@ -428,10 +425,10 @@ html {
         grid-template-columns: 1fr 1fr;
         grid-column-gap: 2rem;
 
-        h2 {
+        h1 {
           grid-row: 1;
-          font-size: 3rem;
-          font-style: italic;
+          font-size: 2rem;
+          line-height:1.2;
           margin-bottom: 1rem;
         }
         .form-container {
