--- a/src/assets/styles/music.scss
+++ b/src/assets/styles/music.scss
@@ -94,9 +94,10 @@ html {
           .logo {
             color: black;
             font-size: 0;
+            padding:0.5rem 0;
 
             img {
-              height: 100%;
+              height: auto;
               max-width: 160px;
             }
           }
