--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -126,7 +126,7 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/grove-bg.png);
+      background: url(/static/mountain-bg.png);
       background-size: cover;
       background-color: white;
       background-position: center;
