--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -2,7 +2,7 @@
   font-family: "Latin Modern";
   font-style: normal;
   font-weight: normal;
-  font-display: swap;
+  font-display: block;
   src: url("./LM-regular.woff2") format("woff2"),
     url("./LM-regular.woff") format("woff"),
     url("./LM-regular.ttf") format("truetype");
@@ -12,7 +12,7 @@
   font-family: "Latin Modern";
   font-style: italic;
   font-weight: normal;
-  font-display: swap;
+  font-display: block;
   src: url("./LM-italic.woff2") format("woff2"),
     url("./LM-italic.woff") format("woff"),
     url("./LM-italic.ttf") format("truetype");
@@ -22,7 +22,7 @@
   font-family: "Latin Modern";
   font-style: normal;
   font-weight: bold;
-  font-display: swap;
+  font-display: block;
   src: url("./LM-bold.woff2") format("woff2"),
     url("./LM-bold.woff") format("woff"),
     url("./LM-bold.ttf") format("truetype");
@@ -32,7 +32,7 @@
   font-family: "Latin Modern";
   font-style: italic;
   font-weight: bold;
-  font-display: swap;
+  font-display: block;
   src: url("./LM-bold-italic.woff2") format("woff2"),
     url("./LM-bold-italic.woff") format("woff"),
     url("./LM-bold-italic.ttf") format("truetype");
@@ -110,8 +110,8 @@ html {
             a {
               color: black;
               text-decoration: none;
-              font-weight: bold;
-              font-family: Helvetica;
+              font-weight: 500;
+              font-family: 'Open Sans';
               margin-left: 2rem;
               text-transform: uppercase;
               font-size: 0.8rem;
@@ -152,7 +152,7 @@ html {
         transform: translateY(-50%);
 
         h1 {
-          font-family: Helvetica;
+          font-family: 'Open Sans';
           font-size: 4rem;
           text-transform: uppercase;
           line-height: 1;
@@ -179,7 +179,7 @@ html {
             padding: 0.5rem 1rem;
             outline: none;
             margin-right: 1rem;
-            font-family: Helvetica;
+            font-family: 'Open Sans';
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -224,7 +224,7 @@ html {
         transform: translateY(-50%);
 
         h1 {
-          font-family: Helvetica;
+          font-family: 'Open Sans';
           font-size: 4rem;
           text-transform: uppercase;
           line-height: 1;
@@ -250,7 +250,7 @@ html {
         p {
           color: #bbb;
           text-align: center;
-          font-family: Helvetica;
+          font-family: 'Open Sans';
           font-weight: bold;
           text-transform: uppercase;
           letter-spacing: 1px;
@@ -329,7 +329,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: Helvetica;
+            font-family: 'Open Sans';
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -406,7 +406,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: Helvetica;
+            font-family: 'Open Sans';
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -460,7 +460,7 @@ html {
             color: white;
             padding: 0.5rem 1rem;
             outline: none;
-            font-family: Helvetica;
+            font-family: 'Open Sans';
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -503,7 +503,7 @@ html {
         .column {
           h2 {
             color: white;
-            font-family: Helvetica;
+            font-family: 'Open Sans';
             text-transform: uppercase;
             margin-bottom: 1rem;
             font-size: 0.8rem;
@@ -513,7 +513,7 @@ html {
             width: max-content;
             margin-bottom: 1rem;
             color: #aaa;
-            font-family: Helvetica;
+            font-family: 'Open Sans';
             font-size: 0.8rem;
           }
         }
