--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -98,7 +98,7 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/chess-bg.png);
+      background: url(/static/test-profile.jpg);
       background-size: cover;
       background-color: white;
       background-position: top center;
