--- a/src/assets/styles/architectures.scss
+++ b/src/assets/styles/architectures.scss
@@ -70,7 +70,7 @@ html {
           .logo {
             color: black;
             font-size: 0;
-            padding:0.5rem 0;
+            padding: 0.5rem 0;
 
             img {
               height: auto;
@@ -82,8 +82,8 @@ html {
             a {
               color: black;
               text-decoration: none;
-              font-weight: bold;
-              font-family: Helvetica;
+              font-weight: 500;
+              font-family: "Open Sans";
               margin-left: 2rem;
               text-transform: uppercase;
               font-size: 0.8rem;
@@ -124,7 +124,7 @@ html {
         transform: translateY(-50%);
 
         h1 {
-          font-family: Helvetica;
+          font-family: "Open Sans";
           font-size: 4rem;
           text-transform: uppercase;
           line-height: 1;
@@ -151,7 +151,7 @@ html {
             padding: 0.5rem 1rem;
             outline: none;
             margin-right: 1rem;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -214,7 +214,7 @@ html {
         div {
           grid-column: 2;
           h1 {
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 3rem;
             text-transform: uppercase;
             line-height: 1;
@@ -230,7 +230,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -257,7 +257,7 @@ html {
         div {
           grid-column: 1;
           h1 {
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 3rem;
             text-transform: uppercase;
             line-height: 1;
@@ -273,7 +273,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: white;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -299,7 +299,7 @@ html {
         div {
           grid-column: 2;
           h1 {
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 3rem;
             text-transform: uppercase;
             line-height: 1;
@@ -315,7 +315,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -366,7 +366,7 @@ html {
             color: white;
             padding: 0.5rem 1rem;
             outline: none;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -400,7 +400,7 @@ html {
         .column {
           h2 {
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             text-transform: uppercase;
             margin-bottom: 1rem;
             font-size: 0.8rem;
@@ -410,7 +410,7 @@ html {
             width: max-content;
             margin-bottom: 1rem;
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 0.8rem;
           }
         }
