--- a/src/assets/styles/art.scss
+++ b/src/assets/styles/art.scss
@@ -70,7 +70,7 @@ html {
           .logo {
             color: black;
             font-size: 0;
-            padding:0.5rem 0;
+            padding: 0.5rem 0;
 
             img {
               height: auto;
@@ -82,8 +82,8 @@ html {
             a {
               color: black;
               text-decoration: none;
-              font-weight: bold;
-              font-family: Helvetica;
+              font-weight: 500;
+              font-family: "Open Sans";
               margin-left: 2rem;
               text-transform: uppercase;
               font-size: 0.8rem;
@@ -111,7 +111,7 @@ html {
         flex: 0 0 50%;
         padding: 1rem;
         h1 {
-          font-family: Helvetica;
+          font-family: "Open Sans";
           font-size: 4rem;
           text-transform: uppercase;
           line-height: 1;
@@ -207,7 +207,7 @@ html {
       .column {
         h2 {
           color: black;
-          font-family: Helvetica;
+          font-family: "Open Sans";
           text-transform: uppercase;
           margin-bottom: 1rem;
           font-size: 0.8rem;
@@ -217,7 +217,7 @@ html {
           width: max-content;
           margin-bottom: 1rem;
           color: black;
-          font-family: Helvetica;
+          font-family: "Open Sans";
           font-size: 0.8rem;
         }
       }
