--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -56,47 +56,47 @@ html {
     background: #f7f7f7;
 
     main {
-      min-height:75vh;
+      min-height: 75vh;
     }
-      header {
-        width: 100%;
-        background: white;
-        margin: 0;
-        padding: 0;
+    header {
+      width: 100%;
+      background: white;
+      margin: 0;
+      padding: 0;
 
-        .wrapper {
-          display: grid;
-          grid-template-columns: 1fr auto;
-          align-items: center;
+      .wrapper {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        align-items: center;
 
-          .logo {
-            color: black;
-            font-size: 0;
-            padding:0.5rem 0;
+        .logo {
+          color: black;
+          font-size: 0;
+          padding: 0.5rem 0;
 
-            img {
-              height: auto;
-              max-width: 160px;
-            }
+          img {
+            height: auto;
+            max-width: 160px;
           }
+        }
 
-          nav {
-            a {
-              color: black;
-              text-decoration: none;
-              font-weight: bold;
-              font-family: Helvetica;
-              margin-left: 2rem;
-              text-transform: uppercase;
-              font-size: 0.8rem;
+        nav {
+          a {
+            color: black;
+            text-decoration: none;
+            font-weight: 500;
+            font-family: "Open Sans";
+            margin-left: 2rem;
+            text-transform: uppercase;
+            font-size: 0.8rem;
 
-              &:hover {
-                color: #1976d2;
-              }
+            &:hover {
+              color: #1976d2;
             }
           }
         }
       }
+    }
     .hero {
       width: 100%;
       background: url(/static/mystic-gate-bg.png);
@@ -125,7 +125,7 @@ html {
         transform: translateY(-50%);
 
         h1 {
-          font-family: Helvetica;
+          font-family: "Open Sans";
           font-size: 4rem;
           text-transform: uppercase;
           line-height: 1;
@@ -152,7 +152,7 @@ html {
             padding: 0.5rem 1rem;
             outline: none;
             margin-right: 1rem;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -175,7 +175,7 @@ html {
         p {
           color: #bbb;
           text-align: center;
-          font-family: Helvetica;
+          font-family: "Open Sans";
           font-weight: bold;
           text-transform: uppercase;
           letter-spacing: 1px;
@@ -205,11 +205,11 @@ html {
         .wrapper {
           .header {
             display: flex;
-            justify-content:space-between;
+            justify-content: space-between;
             align-items: top;
             h1 {
-              flex:0 0 70%;
-              font-family: Helvetica;
+              flex: 0 0 70%;
+              font-family: "Open Sans";
               font-size: 3rem;
               text-transform: uppercase;
               line-height: 1;
@@ -217,7 +217,8 @@ html {
               margin-bottom: 1rem;
               color: black;
             }
-            small {}
+            small {
+            }
           }
           p {
             color: black;
@@ -226,7 +227,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -248,7 +249,7 @@ html {
         .column {
           h2 {
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             text-transform: uppercase;
             margin-bottom: 1rem;
             font-size: 0.8rem;
@@ -258,7 +259,7 @@ html {
             width: max-content;
             margin-bottom: 1rem;
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 0.8rem;
           }
         }
