--- a/src/assets/styles/projects.scss
+++ b/src/assets/styles/projects.scss
@@ -62,7 +62,6 @@
   }
 }
 
-
 *,
 *:before,
 *:after {
@@ -95,7 +94,7 @@ html {
           .logo {
             color: black;
             font-size: 0;
-            padding:0.5rem 0;
+            padding: 0.5rem 0;
 
             img {
               height: auto;
@@ -107,8 +106,8 @@ html {
             a {
               color: black;
               text-decoration: none;
-              font-weight: bold;
-              font-family: Helvetica;
+              font-weight: 500;
+              font-family: "Open Sans";
               margin-left: 2rem;
               text-transform: uppercase;
               font-size: 0.8rem;
@@ -149,7 +148,7 @@ html {
         transform: translateY(-50%);
 
         h1 {
-          font-family: Helvetica;
+          font-family: "Open Sans";
           font-size: 4rem;
           text-transform: uppercase;
           line-height: 1;
@@ -176,7 +175,7 @@ html {
             padding: 0.5rem 1rem;
             outline: none;
             margin-right: 1rem;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -299,14 +298,13 @@ html {
       }
     }
 
-
     .bar {
       background: white;
       .wrapper {
         p {
           color: #bbb;
           text-align: center;
-          font-family: Helvetica;
+          font-family: "Open Sans";
           font-weight: bold;
           text-transform: uppercase;
           letter-spacing: 1px;
@@ -345,7 +343,7 @@ html {
         div {
           grid-column: 2;
           h1 {
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 3rem;
             text-transform: uppercase;
             line-height: 1;
@@ -361,7 +359,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -388,7 +386,7 @@ html {
         div {
           grid-column: 1;
           h1 {
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 3rem;
             text-transform: uppercase;
             line-height: 1;
@@ -404,7 +402,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: white;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -430,7 +428,7 @@ html {
         div {
           grid-column: 2;
           h1 {
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 3rem;
             text-transform: uppercase;
             line-height: 1;
@@ -446,7 +444,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -497,7 +495,7 @@ html {
             color: white;
             padding: 0.5rem 1rem;
             outline: none;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -531,7 +529,7 @@ html {
         .column {
           h2 {
             color: white;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             text-transform: uppercase;
             margin-bottom: 1rem;
             font-size: 0.8rem;
@@ -541,7 +539,7 @@ html {
             width: max-content;
             margin-bottom: 1rem;
             color: #aaa;
-            font-family: Helvetica;
+            font-family: "Open Sans";
             font-size: 0.8rem;
           }
         }
