--- a/src/assets/styles/prism.scss
+++ b/src/assets/styles/prism.scss
@@ -8,8 +8,10 @@
  * @version 1.0
  */
 
-code[class*="language-"],
-pre[class*="language-"] {
+code[class*="sourceCode"],
+pre[class*="sourceCode"],
+code[class*="none"],
+pre[class*="none"] {
   color: #ebdbb2; /* fg1 / fg */
   font-family: Consolas, Monaco, "Andale Mono", monospace;
   direction: ltr;
@@ -29,36 +31,40 @@ pre[class*="language-"] {
   hyphens: none;
 }
 
-pre[class*="language-"]::-moz-selection,
-pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection,
-code[class*="language-"] ::-moz-selection {
+pre[class*="sourceCode"]::-moz-selection,
+pre[class*="sourceCode"] ::-moz-selection,
+code[class*="sourceCode"]::-moz-selection,
+code[class*="sourceCode"] ::-moz-selection {
   color: #fbf1c7; /* fg0 */
   background: #7c6f64; /* bg4 */
 }
 
-pre[class*="language-"]::selection,
-pre[class*="language-"] ::selection,
-code[class*="language-"]::selection,
-code[class*="language-"] ::selection {
+pre[class*="sourceCode"]::selection,
+pre[class*="sourceCode"] ::selection,
+code[class*="sourceCode"]::selection,
+code[class*="sourceCode"] ::selection {
   color: #fbf1c7; /* fg0 */
   background: #7c6f64; /* bg4 */
 }
 
 /* Code blocks */
-pre[class*="language-"] {
+pre[class*="sourceCode"],
+pre[class*="none"] {
   padding: 1em;
   margin: 0.5em 0;
   overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+:not(pre) > code[class*="sourceCode"],
+pre[class*="sourceCode"],
+:not(pre) > code[class*="none"],
+pre[class*="none"]  {
   background: #1d2021; /* bg0_h */
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+:not(pre) > code[class*="sourceCode"],
+:not(pre) > code[class*="none"] {
   padding: 0.1em;
   border-radius: 0.3em;
 }
