--- a/src/assets/styles/architectures.scss
+++ b/src/assets/styles/architectures.scss
@@ -389,7 +389,7 @@ html {
     }
 
     footer {
-      background: white;
+      background: #0f0f0f;
       padding: 2rem 0;
 
       .wrapper {
@@ -399,7 +399,7 @@ html {
 
         .column {
           h2 {
-            color: black;
+            color: white;
             font-family: "Open Sans";
             text-transform: uppercase;
             margin-bottom: 1rem;
@@ -409,7 +409,7 @@ html {
             display: block;
             width: max-content;
             margin-bottom: 1rem;
-            color: black;
+            color: #aaa;
             font-family: "Open Sans";
             font-size: 0.8rem;
           }
