--- a/src/assets/styles/article.scss
+++ b/src/assets/styles/article.scss
@@ -169,10 +169,25 @@ html {
       }
     }
 
-    .content {
+    .article {
       .wrapper {
-        p,h1,h2,h3,h4,h5,h6 {
-          margin-bottom:1rem;
+        display: grid;
+        grid-template-columns: 61.8% 38.2%;
+        .content {
+          padding-right: 1rem;
+          p,
+          h1,
+          h2,
+          h3,
+          h4,
+          h5,
+          h6 {
+            margin-bottom: 1rem;
+          }
+        }
+        .sidebar {
+          padding-left: 1rem;
+          border-left: 1px solid #ccc;
         }
       }
     }
@@ -189,7 +204,7 @@ html {
         .column {
           h2 {
             color: white;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             text-transform: uppercase;
             margin-bottom: 1rem;
             font-size: 0.8rem;
@@ -199,7 +214,7 @@ html {
             width: max-content;
             margin-bottom: 1rem;
             color: #aaa;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             font-size: 0.8rem;
           }
         }
@@ -212,6 +227,11 @@ html {
   padding: 1rem;
   max-width: 80rem;
   margin: 0 auto;
+}
+
+object {
+  display: block;
+  width: 100%;
 }
 
 @keyframes slide {
