--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -211,9 +211,9 @@ html {
           letter-spacing: 1px;
           font-size: 0.8rem;
         }
-        
+
         &:not(:first-child) {
-          border-top:1px solid #f7f7f7;
+          border-top: 1px solid #f7f7f7;
         }
       }
     }
@@ -230,7 +230,7 @@ html {
         .column {
           h2 {
             color: white;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             text-transform: uppercase;
             margin-bottom: 1rem;
             font-size: 0.8rem;
@@ -240,7 +240,7 @@ html {
             width: max-content;
             margin-bottom: 1rem;
             color: #aaa;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             font-size: 0.8rem;
           }
         }
