--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -98,7 +98,7 @@ html {
           .logo {
             color: black;
             font-size: 0;
-            padding:0.5rem 0;
+            padding: 0.5rem 0;
 
             img {
               height: auto;
@@ -111,7 +111,7 @@ html {
               color: black;
               text-decoration: none;
               font-weight: 500;
-              font-family: 'Open Sans';
+              font-family: "Open Sans";
               margin-left: 2rem;
               text-transform: uppercase;
               font-size: 0.8rem;
@@ -152,7 +152,7 @@ html {
         transform: translateY(-50%);
 
         h1 {
-          font-family: 'Open Sans';
+          font-family: "Open Sans";
           font-size: 4rem;
           text-transform: uppercase;
           line-height: 1;
@@ -179,7 +179,7 @@ html {
             padding: 0.5rem 1rem;
             outline: none;
             margin-right: 1rem;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -272,7 +272,7 @@ html {
         p {
           color: #bbb;
           text-align: center;
-          font-family: 'Open Sans';
+          font-family: "Open Sans";
           font-weight: bold;
           text-transform: uppercase;
           letter-spacing: 1px;
@@ -351,7 +351,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -381,15 +381,15 @@ html {
           .column {
             flex: 0 0 30%;
             text-align: center;
-            
+
             .icon {
-              margin:0 auto;
-              height:8rem;
-              width:8rem;
+              margin: 0 auto;
+              height: 8rem;
+              width: 8rem;
 
               img {
-                width:100%;
-                height:100%;
+                width: 100%;
+                height: 100%;
               }
             }
           }
@@ -404,7 +404,7 @@ html {
       background-size: 45vw;
       background-repeat: no-repeat;
       background-position: center left;
-      position:relative;
+      position: relative;
 
       .wrapper {
         display: grid;
@@ -428,7 +428,7 @@ html {
             display: inline-block;
             margin: 1rem 0;
             color: black;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -437,7 +437,6 @@ html {
         }
       }
     }
-
 
     .contact {
       padding: 5rem 0;
@@ -452,7 +451,7 @@ html {
         h1 {
           grid-row: 1;
           font-size: 2rem;
-          line-height:1.2;
+          line-height: 1.2;
           margin-bottom: 1rem;
         }
         .form-container {
@@ -482,7 +481,7 @@ html {
             color: white;
             padding: 0.5rem 1rem;
             outline: none;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             font-weight: bold;
             text-transform: uppercase;
             font-size: 0.8rem;
@@ -525,7 +524,7 @@ html {
         .column {
           h2 {
             color: white;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             text-transform: uppercase;
             margin-bottom: 1rem;
             font-size: 0.8rem;
@@ -535,7 +534,7 @@ html {
             width: max-content;
             margin-bottom: 1rem;
             color: #aaa;
-            font-family: 'Open Sans';
+            font-family: "Open Sans";
             font-size: 0.8rem;
           }
         }
