Edit about page

--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -122,7 +122,7 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/test-profile.jpg);
+      background: url(/static/chess-bg.png);
       background-size: cover;
       background-color: white;
       background-position: top center;
