--- a/src/assets/styles/models.scss
+++ b/src/assets/styles/models.scss
@@ -100,10 +100,10 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/trees-bg.png);
+      background: url(/static/chess-bg.png);
       background-size: cover;
       background-color: white;
-      background-position: center;
+      background-position: top center;
       background-repeat: no-repeat;
       position: relative;
       height: 80vh;
