--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -3,9 +3,6 @@ html {
   body {
     .hero {
       background-image: url(/static/mountain-bg.png);
-      .wrapper h1 {
-        max-width: 55%;
-      }
     }
 
     .intro {
@@ -17,6 +14,11 @@ html {
           align-items: baseline;
           justify-content: space-between;
           padding: 1.6rem;
+          flex-wrap:wrap;
+
+          @media screen and (max-width:600px) {
+            padding:1.6rem 0;
+          }
 
           .column {
             flex: 0 0 30%;
@@ -32,6 +34,9 @@ html {
                 height: 100%;
               }
             }
+            @media screen and (max-width:600px) {
+              flex:0 0 100%;
+            }
           }
         }
       }
@@ -39,19 +44,33 @@ html {
 
     .personal {
       display: flex;
+      flex-wrap:wrap;
       align-items: center;
       background:#f7f7f7;
 
       .content {
         flex: 0 0 50%;
         .wrapper {
-          max-width: 60%;
+          padding:5rem;
+
+          @media screen and (max-width:600px) {
+            padding:2rem;
+          }
+        }
+        @media screen and (max-width:600px) {
+          flex:0 0 100%;
         }
       }
       .image {
         flex: 0 0 50%;
+        align-self: stretch;
         img {
           display: block;
+          height:100%;
+          object-fit:cover;
+        }
+        @media screen and (max-width:600px) {
+          flex:0 0 100%;
         }
       }
     }
@@ -59,38 +78,74 @@ html {
     .contact {
       padding: 8rem 0;
       background: white;
-
+      
+      @media screen and (max-width:600px) {
+        padding:0rem;
+      }
+      
       .wrapper {
         display: grid;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto auto;
         grid-template-columns: 1fr 1fr;
         grid-column-gap: 3.2rem;
+
+        @media screen and (max-width:600px) {
+          grid-template-rows: auto auto auto;
+          grid-template-columns: 1fr;
+          grid-column-gap: 0rem;
+          grid-row-gap: 3.2rem;
+        }
 
         h1 {
           grid-row: 1;
           font-size: 3.2rem;
           margin-bottom: 1.6rem;
+          @media screen and (max-width:600px) {
+            margin-bottom: -1.6rem;
+          }
         }
         .form-container {
-          display: flex;
-          flex-direction: column;
           grid-row: 2;
+          display:flex;
 
-          input {
-            display: block;
-            margin-bottom: 1.6rem;
-            padding: 0.8rem;
-            outline: none;
-            border: 1px solid #ccc;
-            background: white;
-          }
-          textarea {
-            flex: 1;
-            display: block;
-            padding: 0.8rem;
-            outline: none;
-            border: 1px solid #ccc;
-            background: white;
+          form {
+            display: flex;
+            flex-direction: column;
+            flex:1;
+            
+            input {
+              display: block;
+              margin-bottom: 1.6rem;
+              padding: 0.8rem;
+              outline: none;
+              border: 1px solid #ccc;
+              background: white;
+            }
+            textarea {
+              flex: 1;
+              display: block;
+              padding: 0.8rem;
+              outline: none;
+              border: 1px solid #ccc;
+              background: white;
+            }
+            button {
+              background: #1976d2;
+              color: white;
+              padding: 0.8rem 1.6rem;
+              outline: none;
+              border:none;
+              cursor:pointer;
+              font-family: "Open Sans";
+              font-weight: bold;
+              text-transform: uppercase;
+              font-size: 1.2rem;
+              text-decoration: none;
+              border-radius: 3px;
+              max-width: max-content;
+              display: block;
+              margin-top:1.6rem;
+            }  
           }
         }
         .map-container {
@@ -98,23 +153,11 @@ html {
           #map {
             height: 32rem;
           }
+          @media screen and (max-width:600px) {
+            grid-row: 3;
+          }
         }
-        .button {
-          grid-row:3;
-          background: #1976d2;
-          color: white;
-          padding: 0.8rem 1.6rem;
-          outline: none;
-          font-family: "Open Sans";
-          font-weight: bold;
-          text-transform: uppercase;
-          font-size: 1.2rem;
-          text-decoration: none;
-          border-radius: 3px;
-          max-width: max-content;
-          display: block;
-          margin-top:1.6rem;
-        }
+
       }
     }
 
