--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -116,9 +116,12 @@ html {
             text-transform: uppercase;
             font-size: 1.2rem;
 
-            &:hover {
+            &.active, &:hover {
               color: #1976d2;
             }
+          }
+          @media screen and (max-width: 600px) {
+            display:none;
           }
         }
       }
@@ -156,15 +159,17 @@ html {
           line-height: 1;
           letter-spacing: -0.1rem;
           margin-bottom: 1rem;
-          max-width: 50%;
           color: white;
+          @media screen and (max-width: 600px) {
+            font-size: 5.8rem;
+          }
         }
 
         p {
           color: white;
           font-size:1.7rem;
           font-style: italic;
-          max-width: 50%;
+          max-width: 600px;
           margin-bottom: 2rem;
         }
       }
@@ -204,4 +209,8 @@ html {
   padding: 1rem;
   max-width: 120rem;
   margin: 0 auto;
+
+  @media screen and (max-width:600px) {
+    padding:2rem;
+  }
 }
