--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -3,7 +3,7 @@ html {
   body {
     .hero {
       width: 100%;
-      background-image: url(/static/trees-bg.png);
+      background-image: url(/static/mountain-bg.png);
     }
     .why {
       background: white;
